force-app/main/default/objects/State_Code_Mapping__mdt/State_Code_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure mappings for state values received from external systems (e.g. &quot;ibau&quot;).</description>
    <label>State Code Mapping</label>
    <pluralLabel>State Code Mappings</pluralLabel>
</CustomObject>