force-app/main/default/objects/State_Code_Mapping__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <referenceTo>Country_Code_Mapping__mdt</referenceTo>
    <relationshipName>ibau_State_Code_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>