force-app/main/default/objects/State_Code_Mapping__mdt/fields/infobau__c.field-meta.xml
<CustomField>
    <fullName>infobau__c</fullName>
    <label>infobau</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>