force-app/main/default/objects/State_Code_Mapping__mdt/fields/SF__c.field-meta.xml
<CustomField>
    <fullName>SF__c</fullName>
    <label>SF</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>